--- a/homeweb.css
+++ b/homeweb.css
@@ -262,6 +262,138 @@
 }
 
 .button:hover{
-    background-color:rgb(77, 100, 77);
+    background-color:rgb(50, 71, 50);
     color: white;
 }
+
+
+
+.logo{
+    font-size: 15px;
+    letter-spacing: 5px;
+    text-align: center;
+}
+
+.logo-1{
+
+    font-size: 45px;
+    font-weight: 600;
+    text-align: center;
+    
+}
+
+.parentlogo{
+
+    padding-top: 60px;
+    padding-bottom: 30px;
+}
+
+.parent6-img{
+    position: relative;
+}
+
+.child6-img{
+    position: absolute;
+    top: 0;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 255px;
+    color: white;
+    font-size: 30px;
+    font-weight: 600;
+    background-color: rgb(0, 0, 0, 0.6);
+    visibility: hidden;
+}
+
+.parent6-img:hover .child6-img{
+    visibility: visible;
+}
+
+.parent7-img{
+    position: relative;
+}
+
+.child7-img{
+    position: absolute;
+    top: 0;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 255px;
+    color: white;
+    font-size: 30px;
+    font-weight: 600;
+    background-color: rgb(0, 0, 0, 0.6);
+    visibility: hidden;
+}
+
+.parent7-img:hover .child7-img{
+    visibility: visible;
+}
+
+.parent8-img{
+    position: relative;
+}
+
+.child8-img{
+    position: absolute;
+    top: 0;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 255px;
+    color: white;
+    font-size: 30px;
+    font-weight: 600;
+    background-color: rgb(0, 0, 0, 0.6);
+    visibility: hidden;
+}
+
+.parent8-img:hover .child6-img{
+    visibility: visible;
+}
+
+.parent9-img{
+
+    position: relative;
+    width: 100%;
+    height: 255px;
+    background-color: aqua;
+    color: white;
+    font-size: 30px;
+    font-weight: 600;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+
+}
+.child9-img{
+
+    position: absolute;
+    background-color: rgb(0, 0, 0, 0.6);
+    visibility: hidden;
+    width: 100%;
+    height: 255px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}         
+
+.parent9-img:hover .child9-img{
+
+    visibility: visible;
+}
+
+.margin{
+    padding-bottom: 60px;
+}
+
